# trust-region-layers

./: .gitignore  pyproject.toml
trust_region_projections/algorithms/: abstract_algo.py
trust_region_projections/algorithms/awr/: awr.py
trust_region_projections/algorithms/deep_pro_mp/: deep_pro_mp.py
trust_region_projections/algorithms/mpo/: mpo.py
trust_region_projections/algorithms/pg/: pg.py
trust_region_projections/algorithms/sac/: sac.py
trust_region_projections/algorithms/td3/: td3.py
trust_region_projections/algorithms/vlearn/: vlearn.py
trust_region_projections/algorithms/vlearn_q/: vlearn_q.py
trust_region_projections/algorithms/vtrace/: vtrace.py
trust_region_projections/losses/: loss_factory.py  value_loss.py
trust_region_projections/models/bound_model/: constraint_net.py
trust_region_projections/models/policy/: policy_factory.py  (+9 more)
trust_region_projections/mps/: pro_mp.py
trust_region_projections/projections/: base_projection_layer.py  frob_projection_layer.py  kl_projection_layer.py  papi_projection.py  projection_factory.py  w2_projection_layer.py  w2_projection_layer_non_com.py
trust_region_projections/replay_buffer/: abstract_replay_buffer.py  logpac_buffer.py  n_step_replay_buffer.py  replay_buffer.py  replay_buffer_factory.py  trajectory_replay_buffer.py
trust_region_projections/sampling/: dataclass.py  mp_sampler.py  time_limit_monitor.py  trajectory_sampler.py
trust_region_projections/utils/: custom_store.py  network_utils.py  projection_utils.py  torch_utils.py
utils/: generate_experiment_id.py  get_agent.py  utils.py
(+4 files in other folders)
